file structure change

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
 	<h1>Hello!</h1>
-    <p>This is the first website for design 3a with Alvin Ashiatey</p>
+  <a href="poemvariation/variation2/poem2.html">
+  Poem Variation Exercise</a>
   </body>
 </html>
