--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
 	<h1>Hello!</h1>
+  <a href="poemvariation/variation1/poem1.html">
+    Poem 1</a>
+
   <a href="poemvariation/variation2/poem2.html">
-  Poem Variation Exercise</a>
+  Poem 2</a>
   </body>
 </html>
