--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
 
   <a href="poemvariation/variation2/poem2.html">
   Poem 2</a>
+
+  <a href="poemvariation/variation3/poem3.html">
+    Poem 3</a>
   </body>
 </html>
